# amzn-wl

./: .gitignore  README.md  README.rst  alembic.ini  pyproject.toml
alembic/versions/: 09a61aaf486d_create_product_wishlist_table.py  2f172f90298b_create_price_table.py  2f172f90298b_create_product_price_table.py  5b6303405a29_drop_currency_columns.py  7f617bc0dfc3_create_price_drop_table.py  84f432fe9071_create_site_table.py  8981a7eed573_create_product_table.py  d01bf8db3764_create_currency_table.py  d10c8eddc0cf_create_wishlist_table.py  e1413d549209_add_currency_id_column.py  f2880b35e671_create_product_price_drop_table.py  ff54dced33c2_replace_currency_with_currency_id.py  ffeadb986375_create_product_price_loyalty_table.py
src/amzn_wl/: __main__.py  actions.py  configs.py  db.py  drivers.py  extractors.py  primitives.py  products.py  signin.py  utils.py  wishlists.py
src/amzn_wl/entities/: loyalties.py  loyalty.py  price.py  price_drop.py  price_drops.py  prices.py  product.py  product_price.py  products.py  site.py  sites.py  wishlist.py  wishlist_item.py  wishlists.py
src/amzn_wl/utils/: selenium.py
tests/amzn_wl/: test_db.py  test_products.py
tests/amzn_wl/entities/: test_price.py  test_wishlist.py  test_wishlists.py
