[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amzn_wl"
version = "24.9.0"
authors = [{name="Taro Sato", email="okomestudio@gmail.com"}]
description = "amzn-wl for Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "dataclasses-json==0.6.7",
    "selenium==4.30.0",
    "selenium-stealth==1.0.6",
]

[project.optional-dependencies]
dev = [
    "alembic==1.11.1",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
    "ruff==0.6.4",
]

test = [
    "coverage[toml]==7.6.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
]

[project.urls]
"Homepage" = "https://github.com/okomestudio/amzn-wl"
"Buck Tracker" = "https://github.com/okomestudio/amzn-wl/issues"

[project.scripts]
amzn-wl = "amzn_wl.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE.txt"]
include-package-data = true
package-data = {"amzn_wl" = []}

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "def __str__",
    "except ImportError",
    "if __name__ == .__main__.:",
    "log(|ging).(debug|info|warning)",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-vv --cov=amzn_wl --cov-report=term-missing"
testpaths = [
    "tests",
]

[too.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
    module = []
    ignore_missing_imports = true
